tdf#167178: make sure to synchronize the tab in AdjustUpdatedRanges

The change could adjust the tab in the aRanges; but aRange still has
the original tab number. It needs to be updated.

Regression after commit a0403b6eb25a99f6225e0f77f4b14d78f4045c9e
(tdf#47479: Do not modify range of sheet / column / row in
notifications, 2025-05-02).

Change-Id: I248f5575ffc7fe388a65cb8bc0007ec72d9f2129
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/186906
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins